--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<ul>
 			<a href="#" class="close"></a>
 			<li>
-				<a href="#item02">
-					<img src="https://cdn.dribbble.com/users/545884/screenshots/3981307/lorena2.png" alt="">
+				<a href="game1">
+					<img src="img/thumbnail.png" alt="Mega Macho Brothers">
 				</a>
 			</li>
 
@@ -72,11 +72,14 @@
 	
 		<div class="row">
 			<div class="description">
-				<h1>Item 01</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
+				<h1>Game 1</h1>
+                <p>Mega Macho Brothers</p>
+                <p>ABOUT <br>
+                    Defend the city from an alien invasion with your brother in the most macho way possible. Grab, throw, grapple each other, and obliterate your foes!</p>
+                    <p><a href="https://games.digipen.edu/games/mega-macho-bros">Download here</a>></p>
 			</div>
 
-				<img src="https://cdn.dribbble.com/users/545884/screenshots/3981307/lorena2.png" alt="">
+				<img src="img/thumbnail.png" alt="">
 			</div>
 		</div> <!-- / row -->
 
