--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	</div> <!-- / row -->
 
 	<!-- Item 01 -->
-	<div id="item01" class="port">
+	<div id="game1" class="port">
 	
 		<div class="row">
 			<div class="description">
