--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio Gallery</title>
+  <title> Zachary's Game Portfolio </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 
@@ -14,56 +14,31 @@
 
 
 <header>
-    <h1> Placeholder<br> <span>[ Portfolio Gallery ]</span></h1>
+    <h1> Zachary Sng <br> <span>[ Game Portfolio Gallery ]</span></h1>
 </header>
 
+<div id="about">
+    <h1>About Me</h1>
+    <p>Hi, I'm Zachary Sng and I like warm hugs. Below is my game Portfolio, click to expand</p>
+</div>
 <div id="top"></div>
 <section class="gallery">
 	<div class="row">
 		<ul>
 			<a href="#" class="close"></a>
 			<li>
-				<a href="game1">
-					<img src="img/thumbnail.png" alt="Mega Macho Brothers">
+				<a href="#game1">
+					<img src="img/game1thumbnail.png" alt="Mega Macho Brothers">
 				</a>
 			</li>
 
 			<li>
-				<a href="#item02">
-					<img src="https://cdn.dribbble.com/users/545884/screenshots/3892302/contact.png" alt="">
+				<a href="#game2">
+					<img src="img/game2thumbnail.png" alt="Get off my Lawn">
 				</a>
 			</li>
 
-			<li>
-				<a href="#item02">
-					<img src="https://cdn.dribbble.com/users/545884/screenshots/4154721/dive--001.png" alt="">
-				</a>
-			</li>
-			<li>
-				<a class="image" href="#item01">
-					<img src="https://cdn.dribbble.com/users/545884/screenshots/4356121/darko--dr.jpg" alt="">
-				</a>
-			</li>
-			<li>
-				<a class="image" href="#item02">
-					<img src="https://cdn.dribbble.com/users/545884/screenshots/3695553/news.png" alt="">
-				</a>
-			</li>
-			<li>
-				<a class="image" href="#item01">
-					<img src="https://cdn.dribbble.com/users/545884/screenshots/4360101/liberosis_--_12.png" alt="">
-				</a>
-			</li>
-			<li>
-				<a class="image" href="#item01">
-					<img src="https://cdn.dribbble.com/users/545884/screenshots/3148799/technical-book.jpg" alt="">
-				</a>
-			</li>
-			<li>
-				<a class="image" href="#item01">
-					<img src="https://cdn.dribbble.com/users/545884/screenshots/2883479/cover.jpg" alt="">
-				</a>
-			</li>
+		
 		</ul>
 	</div> <!-- / row -->
 
@@ -74,26 +49,31 @@
 			<div class="description">
 				<h1>Game 1</h1>
                 <p>Mega Macho Brothers</p>
-                <p>ABOUT <br>
+                <p> <u>ABOUT</u> <br>
                     Defend the city from an alien invasion with your brother in the most macho way possible. Grab, throw, grapple each other, and obliterate your foes!</p>
-                    <p><a href="https://games.digipen.edu/games/mega-macho-bros">Download here</a>></p>
+                    <p><a href="https://games.digipen.edu/games/mega-macho-bros">Download here </a></p>
+                    <p><u>ROLE</u> <br> Physics/AI programmer, Sound Designer, Composer</p>
 			</div>
 
-				<img src="img/thumbnail.png" alt="">
+				<img src="img/game1thumbnail.png" alt="Mega Macho Brothers">
 			</div>
 		</div> <!-- / row -->
 
 	</div> <!-- / Item 02 -->
 
 	<!-- Item 02 -->
-	<div id="item02" class="port">
+	<div id="game2" class="port">
 	
 		<div class="row">
 			<div class="description">
-				<h1>Item 02</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
+				<h1>Game 2</h1>
+                <p>Get off my Lawn</p>
+                <p> <u>ABOUT</u> <br>
+                    Get off my lawn! is a 2D tower defence strategy game in which the player must defend their house against waves of enemy units, and strike back at the enemy base. The player does so by sending out units of their own to attack the enemy and building towers to defend against the enemy waves. The objective of the game is to hold out against all enemy waves, or to destroy the enemy base.</p>
+                    <p><a href="https://games.digipen.edu/games/get-off-my-lawn">Download here </a></p>
+                    <p><u>ROLE</u> <br> Game Designer</p>
 			</div>
-			<img src="https://cdn.dribbble.com/users/545884/screenshots/2883479/cover.jpg" alt="">
+			<img src="img/game2thumbnail.png" alt="Get off my Lawn">
 		</div> <!-- / row -->
 
 	</div> <!-- / Item 02 -->
